--- a/exercise_files/Ch01/01_03b/tsconfig.json
+++ b/exercise_files/Ch01/01_03b/tsconfig.json
@@ -1,8 +1,12 @@
 {
-    "compilerOptions": {
-        "outDir": "build",
-        "target": "esnext",
-        "noEmit": true
-    },
-    "include": ["src/**/*"]
+  "compilerOptions": {
+    "allowJs": true,
+    "checkJs": true,
+    "outDir": "build",
+    "target": "esnext",
+    "noEmit": true
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
